jilles      2006/01/02 12:47:52 UTC	(20060102-4423)
  Log:
  Remove ugly Privs: display in ns/cs/us status.
  

  Changes:	Modified:
  +0 -11	trunk/modules/chanserv/status.c (File Modified) 
  +0 -11	trunk/modules/nickserv/status.c (File Modified) 
  +0 -11	trunk/modules/userserv/status.c (File Modified) 


jilles      2006/01/02 12:43:17 UTC	(20060102-4421)
  Log:
  Repair SPECS USER broken in r4417 and add SPECS OPERCLASS
  to query privileges associated with oper classes.
  

  Changes:	Modified:
  +2 -1		trunk/help/oservice/specs (File Modified) 
  +38 -18	trunk/modules/operserv/specs.c (File Modified) 


jilles      2006/01/02 12:41:30 UTC	(20060102-4419)
  Log:
  Add has_priv_operclass().
  

  Changes:	Modified:
  +2 -0		trunk/include/privs.h (File Modified) 
  +9 -0		trunk/src/privs.c (File Modified) 


jilles      2006/01/02 12:28:05 UTC	(20060102-4417)
  Log:
  Rework a bit to be more flexible. Should be no
  functional changes.
  

  Changes:	Modified:
  +68 -159	trunk/modules/operserv/specs.c (File Modified) 


jilles      2006/01/02 12:00:58 UTC	(20060102-4415)
  Log:
  ChanServ CLOSE: Use MC_INHABIT instead of rolling our own.
  

  Changes:	Modified:
  +10 -100	trunk/modules/chanserv/close.c (File Modified) 
  +2 -1		trunk/modules/chanserv/main.c (File Modified) 


pfish       2006/01/02 11:33:51 UTC	(20060102-4413)
  Log:
  OperServ SPECS: Show when a user can bypass registration limits (PRIV_REG_NOLIMIT)
  

  Changes:	Modified:
  +9 -1		trunk/modules/operserv/specs.c (File Modified) 


jilles      2006/01/02 11:28:01 UTC	(20060102-4411)
  Log:
  Change /ns link, now only allows the user's current nick
  to be linked (to the nick they are identified to).
  
  PRIV_REG_NOLIMIT now exempts from the per-email limit.
  

  Changes:	Modified:
  +7 -5		trunk/help/nickserv/link (File Modified) 
  +10 -27	trunk/modules/nickserv/link.c (File Modified) 


nenolod     2006/01/02 11:27:23 UTC	(20060102-4409)
  Log:
  Extend our copyrights to 2006.
  
